kubernetes/apps/storage/garage/cluster/rpc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-rpc-lb
  namespace: storage
  annotations:
    lbipam.cilium.io/ips: "192.168.10.51"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: garage
    app.kubernetes.io/name: garage
  ports:
    - port: 3901
      targetPort: 3901
