kubernetes/apps/storage/garage/cluster/httproute-buckets.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-web-buckets
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - "web.garage.${SECRET_DOMAIN}"
    - "*.web.garage.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: garage
          port: 3902
